[package]
name = "rust-dhcp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
libc = "0.2.151"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
socket2 = "0.5.5"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tracing = { version = "0.1.40", features = ["log-always"] }
